--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@syncfusion/ej2-react-spreadsheet": "^27.2.2",
     "@syncfusion/ej2-react-buttons": "^27.2.2",
     "@syncfusion/ej2-react-dropdowns": "^27.2.2",
+    "@syncfusion/ej2-react-spreadsheet": "^27.2.2",
+    "jspreadsheet": "^12.0.0",
+    "jsuites": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
